k8s/noctipede/smart-crawler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noctipede-smart-crawler
  namespace: noctipede
  labels:
    app: noctipede-smart-crawler
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noctipede-smart-crawler
  template:
    metadata:
      labels:
        app: noctipede-smart-crawler
    spec:
      containers:
      - name: smart-crawler
        image: ghcr.io/splinterstice/noctipede:b663234-dirty
        command: ['sh', '-c']
        args:
        - |
          [...]
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "500m"
            
        volumeMounts:
        - name: sites-data
          mountPath: /app/data
          readOnly: false
        - name: log-data
          mountPath: /app/logs
        - name: output-data
          mountPath: /app/output
          
      volumes:
      - name: sites-data
        emptyDir: {}
      - name: log-data
        emptyDir: {}
      - name: output-data
        emptyDir: {}
          
      restartPolicy: Always
